--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <base href="/tree-online">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description"
         content="An online tree-like utility for generating ASCII folder structure diagrams. Written in TypeScript and React." />
@@ -10,7 +11,7 @@
     <meta property="og:title" content="tree-online.github.io" />
     <meta property="og:description"
         content="An online tree-like utility for generating ASCII folder structure diagrams. Written in TypeScript and React." />
-    <meta property="og:image" content="id1945.github.io/tree-online//tree-logo.png" />
+    <meta property="og:image" content="id1945.github.io/tree-online/tree-logo.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
