--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <base href="/">
+    <base href="/tree-online/">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description"
         content="An online tree-like utility for generating ASCII folder structure diagrams. Written in TypeScript and React." />
