--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <base href="/tree-online/">
+    <base href="/">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description"
         content="An online tree-like utility for generating ASCII folder structure diagrams. Written in TypeScript and React." />
@@ -15,26 +15,24 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#222222" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/tree-online/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/tree-online/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/tree-online/favicon-16x16.png" />
+    <link rel="mask-icon" href="/tree-online/safari-pinned-tab.svg" color="#222222" />
     <meta name="msapplication-TileColor" content="#222222" />
     <meta name="theme-color" content="#222222" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/tree-online/manifest.json" />
     <title>Tree</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-36351579-2"></script>
-    <script>function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-36351579-2")</script>
-    <link href="/2.ca025b70.chunk.css" rel="stylesheet">
-    <link href="/main.8fec78d8.chunk.css" rel="stylesheet">
+    <link href="/tree-online/2.ca025b70.chunk.css" rel="stylesheet">
+    <link href="/tree-online/main.8fec78d8.chunk.css" rel="stylesheet">
 </head>
 
 <body class="w-100 h-100 position-absolute">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>!function (e) { function r(r) { for (var n, i, l = r[0], a = r[1], f = r[2], c = 0, s = []; c < l.length; c++)i = l[c], Object.prototype.hasOwnProperty.call(o, i) && o[i] && s.push(o[i][0]), o[i] = 0; for (n in a) Object.prototype.hasOwnProperty.call(a, n) && (e[n] = a[n]); for (p && p(r); s.length;)s.shift()(); return u.push.apply(u, f || []), t() } function t() { for (var e, r = 0; r < u.length; r++) { for (var t = u[r], n = !0, l = 1; l < t.length; l++) { var a = t[l]; 0 !== o[a] && (n = !1) } n && (u.splice(r--, 1), e = i(i.s = t[0])) } return e } var n = {}, o = { 1: 0 }, u = []; function i(r) { if (n[r]) return n[r].exports; var t = n[r] = { i: r, l: !1, exports: {} }; return e[r].call(t.exports, t, t.exports, i), t.l = !0, t.exports } i.m = e, i.c = n, i.d = function (e, r, t) { i.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t }) }, i.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, i.t = function (e, r) { if (1 & r && (e = i(e)), 8 & r) return e; if (4 & r && "object" == typeof e && e && e.__esModule) return e; var t = Object.create(null); if (i.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e) for (var n in e) i.d(t, n, function (r) { return e[r] }.bind(null, n)); return t }, i.n = function (e) { var r = e && e.__esModule ? function () { return e.default } : function () { return e }; return i.d(r, "a", r), r }, i.o = function (e, r) { return Object.prototype.hasOwnProperty.call(e, r) }, i.p = "/"; var l = this["webpackJsonp@nathanfriend/tree-online"] = this["webpackJsonp@nathanfriend/tree-online"] || [], a = l.push.bind(l); l.push = r, l = l.slice(); for (var f = 0; f < l.length; f++)r(l[f]); var p = a; t() }([])</script>
-    <script src="/2.db8c8bc1.chunk.js"></script>
-    <script src="/main.860ea691.chunk.js"></script>
+    <script src="/tree-online/2.db8c8bc1.chunk.js"></script>
+    <script src="/tree-online/main.860ea691.chunk.js"></script>
 </body>
 
 </html>
